[gd_scene load_steps=9 format=2]

[ext_resource path="res://GameAssets/white.PNG" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://GameAssets/BarOver.png" type="Texture" id=3]
[ext_resource path="res://GameAssets/ProgressBar.png" type="Texture" id=4]
[ext_resource path="res://GameAssets/BarUnder.png" type="Texture" id=5]
[ext_resource path="res://GameAssets/Sounds/Retro Impact 20.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38.5, 38 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 40 )

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 16
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.756863, 0.141176, 0.141176, 1 )
texture = ExtResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="Rotater" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="HealthOver" type="TextureProgress" parent="."]
margin_left = -68.0
margin_top = -86.0
margin_right = 206.0
margin_bottom = -61.0
rect_scale = Vector2( 0.5, 0.5 )
value = 100.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
texture_progress_offset = Vector2( 2, 2 )
tint_progress = Color( 0.341176, 0.584314, 0.0980392, 1 )

[node name="HealthUnder" type="TextureProgress" parent="."]
show_behind_parent = true
margin_left = -68.0
margin_top = -86.0
margin_right = 206.0
margin_bottom = -61.0
rect_scale = Vector2( 0.5, 0.5 )
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
texture_progress_offset = Vector2( 2, 2 )
tint_progress = Color( 0.87451, 0.133333, 0.133333, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "Effects"

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
